# newslit

./: Cargo.toml  LICENSE  README.md  VC.txt
gui/: index.html  script.js  style.css
gui/h-content/: business-news.html  growing-a-business.html  leadership.html  lifestyle.html  living.html  money-finance.html  science-technology.html  starting-a-business.html  technology.html
gui/scripts/: business-news-sc.js  growing-a-business-sc.js  leadership-sc.js  lifestyle-sc.js  living-sc.js  money-finance-sc.js  science-technology-sc.js  script.js  starting-a-business-sc.js  technology-sc.js
gui/styles/: style.css
src/: main.rs
